--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ html {
     min-height: 100vh;
     width: 100%;
     max-width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 /*---------------------------HEADER-------------------------------------------------*/
@@ -300,10 +300,7 @@ html {
     position: relative;
 }
 
-.hello__backround {
-
-    overflow: hidden;
-}
+.hello__backround {}
 
 .hello__backround img {
     width: 100vw;
