--- a/css/style.css
+++ b/css/style.css
@@ -395,10 +395,31 @@ html {
 ._container {}
 
 .about__block {
+
+    position: relative;
     padding: 130px 0;
     width: 100%;
     justify-content: space-between;
     display: flex;
+}
+
+.circle__decor::before {
+    content: "";
+    position: absolute;
+    z-index: 22;
+    width: 100%;
+    height: 100%;
+    height: 1800px;
+    left: 0%;
+    top: 200px;
+    background-image: url(/img/main/circle_decor.png);
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.circle__decor {
+    position: relative;
 }
 
 h2 {
@@ -1136,6 +1157,16 @@ h2 {
 
     .about__block {
         padding-top: 30px;
+    }
+
+    .roadmap__back {
+        top: 0;
+        height: 1500px;
+        transform: rotate(90deg);
+    }
+
+    .roadmap__phase2:hover {
+        transform: scale(1.1);
     }
 }
 
